# bioai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: dashboard.py
data/diabetes/: README.md
data/diabetes/models/: mlp_diabetes.keras  scaler.npy
data/dna_classification/models/: CNN_2Layers_3mers.h5
data/exercises/: README.md
data/exercises/raw/: exercises.csv
data/gym_members/: README.md
data/metabolomics/: README.md
data/metabolomics/raw/: ST001906_raw.txt  diabetes_metabolomics.csv
docs/: architecture.md  bio_ai_hackathon.md  credit.md  data.md  demo.md  eval.md  health_trainer.md  multi_agent_healthcare_intelligence_system.md  vision.md
mb_js/: progress.md
notebooks/: dna_cnn.ipynb
scripts/: demo_conversation.py  evaluate.py  evaluate_health_trainer.py  process_metabolomics.py  run.py
src/bioai/: models.py
src/bioai/agents/: genomics.py  metabolomics.py
src/bioai/eval/: cases.py  judge.py  metrics.py  ralph.py
src/bioai/eval/data/: case_inputs.json
src/bioai/eval/data/mock_outputs/case-1/: genomics.json
src/bioai/eval/data/mock_outputs/case-2/: genomics.json
src/bioai/eval/data/mock_outputs/case-3/: genomics.json
src/bioai/eval/data/mock_outputs/case-4/: genomics.json
src/bioai/tools/: metabolic_profile_analyzer.py
tests/: test_dna_classifier.py  test_eval_cases.py  test_eval_judge.py  test_eval_metrics.py  test_eval_ralph.py  test_metabolomics_agent.py  test_proteomics_agent.py
